case details controller

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=Rights_Association
 APP_ENV=local
 APP_KEY=base64:7o+5YU+GgKC5XZeoqwceIm02fwAFfbI7PA987hUGARY=
 APP_DEBUG=true
@@ -28,14 +28,23 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_DRIVER=smtp
+MAIL_HOST=mailserver.sixlogics.com
+MAIL_PORT=465
+MAIL_USERNAME=khizer.sajjad@sixlogics.com
+MAIL_PASSWORD=Sixlgx!123
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=khizer.sajjad@sixlogics.com
 MAIL_FROM_NAME="${APP_NAME}"
+
+# MAIL_MAILER=smtp
+# MAIL_HOST=mailpit
+# MAIL_PORT=1025
+# MAIL_USERNAME=null
+# MAIL_PASSWORD=null
+# MAIL_ENCRYPTION=null
+# MAIL_FROM_ADDRESS="hello@example.com"
+# MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
