--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=Rights_Association
+APP_NAME="Leads Genration"
 APP_ENV=local
 APP_KEY=base64:7o+5YU+GgKC5XZeoqwceIm02fwAFfbI7PA987hUGARY=
 APP_DEBUG=true
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=rights_association
+DB_DATABASE=leads
 DB_USERNAME=root
 DB_PASSWORD=
 
